--- a/src/FacilityManagement.Core/FacilityManagement.Core.csproj
+++ b/src/FacilityManagement.Core/FacilityManagement.Core.csproj
@@ -8,6 +8,7 @@
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.28.3" />
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="StronglyTypedId" Version="1.0.0-beta05" />
