--- a/src/FacilityManagement.Api/appsettings.json
+++ b/src/FacilityManagement.Api/appsettings.json
@@ -1,4 +1,12 @@
 {
+  "Authentication": {
+    "TokenPath": "/api/users/token",
+    "ExpirationMinutes": 10080,
+    "JwtKey": "lTBY2RXrcDQXtstka5XfRYz5NySUs7ni",
+    "JwtIssuer": "localhost",
+    "JwtAudience": "all",
+    "AuthType": "facility-management"
+  },
   "Serilog": {
     "Using": [ "Serilog.Sinks.Console", "Serilog.Sinks.File", "Serilog.Sinks.Seq" ],
     "MinimumLevel": "Information",
