--- a/tests/FacilityManagement.Testing/FacilityManagement.Testing.csproj
+++ b/tests/FacilityManagement.Testing/FacilityManagement.Testing.csproj
@@ -1,6 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.Testing" Version="6.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
     <ProjectReference Include="..\..\src\FacilityManagement.Api\FacilityManagement.Api.csproj" />
   </ItemGroup>
 
