feat: complete api

--- a/src/FacilityManagement.Core/FacilityManagement.Core.csproj
+++ b/src/FacilityManagement.Core/FacilityManagement.Core.csproj
@@ -8,10 +8,13 @@
     <PackageReference Include="CSharpFunctionalExtensions" Version="2.28.3" />
     <PackageReference Include="FluentValidation" Version="10.3.6" />
     <PackageReference Include="MediatR" Version="10.0.1" />
+    <PackageReference Include="Microsoft.AspNetCore.Http" Version="2.2.2" />
     <PackageReference Include="Microsoft.AspNetCore.Http.Abstractions" Version="2.2.0" />
     <PackageReference Include="Microsoft.Extensions.Configuration.Abstractions" Version="6.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="StronglyTypedId" Version="1.0.0-beta06" />
+    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
+    <PackageReference Include="System.Drawing.Primitives" Version="4.3.0" />
   </ItemGroup>
 
   <PropertyGroup>
